# t_mypy

./: .pre-commit-config.yaml  mypy.ini
t_mypy/: README.md  pyproject.toml
t_mypy/t_mypy/: box_util.py
