[tool.poetry]
name = "t-mypy"
version = "0.1.0"
description = ""
authors = ["Sergei Smolov <sergei_smolov@epam.com>"]
readme = "README.md"
packages = [{include = "t_mypy"}]

[tool.poetry.dependencies]
python = "3.8.10"
mypy = "0.910"
numpy = "^1.21.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
